@@ -129,5 +129,17 @@
         <remarks />
       </Docs>
     </Member>
+  <Member MemberName="Entry">
+      <MemberSignature Language="C#" Value="public Gtk.Entry Entry { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>Gtk.Entry</ReturnType>
+      </ReturnValue>
+      <Docs>
+        <summary>The combo box's <see cref="T:Gtk.Entry" /> child.</summary>
+        <value>The <see cref="T:Gtk.Entry" />.</value>
+        <remarks />
+      </Docs>
+    </Member>
   </Members>
 </Type>
