@@ -24,3 +24,8 @@
 				AppendText (entry);
 		}
 
+		public Gtk.Entry Entry {
+			get {
+				return (Gtk.Entry)Child;
+			}
+		}
