@@ -1,3 +1,7 @@
+2005-07-27  Dan Winship  <danw@novell.com>
+
+	* TestComboBox.cs: test ComboBoxEntry.Entry
+
 2004-05-31  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
 
 	reviewed by: <delete if not using a buddy>
