@@ -1,5 +1,10 @@
 2005-07-27  Dan Winship  <danw@novell.com>
 
+	* gtk/ComboBoxEntry.custom: add an "Entry" property to cleanly
+	fetch the ComboBoxEntry's Gtk.Entry
+
+2005-07-27  Dan Winship  <danw@novell.com>
+
 	* parser/gapi2xml.pl (addParamsElem): deal with G_CONST_RETURN in
 	params... some functions use that to mark const "out" params. In
 	fact, let's use it as a hint to mark them pass_as="out" too...
